2011-12-06  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* interface/Makefile.am, interface/timidity.el,
	  interface/timidity.pel: Set the absolute path of timidity
	  in timidity.el automatically; add timidity.pel file to be
	  preprocessed, and remove timidity.el
	* configure.in: In the case of --enable-dynamic=emacs and
	  --enable-dynamic=alsaseq, make install timidity.el and
	  enable the long option of ALSA sequencer interface,
	  respectively (in addition, autoreconf)

2011-12-05  Hans de Goede <hdegoede@redhat.com>

	* interface/tkmidity.ptcl, interface/tkpanel.tcl,
	  script/dllutl.rb: [PATCH 11/17] Make shebang paths
	  /usr/bin/foo rather then /usr/local/bin/foo
	  This makes life easier for packagers, people who want to use
	  non standard paths will need to fix this up themselves...
	  (revised by TAMUKI Shoichi)

2011-12-04  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* configure.in: Support for Tcl/Tk 8.5 and autoreconf

2011-12-04  Hans de Goede <hdegoede@redhat.com>

	* timidity/esd_a.c: [PATCH 1/9] esd_a: Don't start ESD
	  Don't start ESD if it is not running yet, esp. not from
	  detect() !
	* timidity/ao_a.c: [PATCH 2/9] libao: Add a detect() function
	  Most Linux distros use pulseaudio by now, and libao is the
	  best way to use pulseaudio from timidity. This patch adds a
	  detect function to libao, which will make libao autodetect
	  succeed only when pulse is available, so that we can prefer
	  libao in the probe order to get pulse, without also getting
	  libao on systems where we should be using alsa directly.
	* timidity/output.c: [PATCH 3/9] Change audio output detection
	  order
	  First try the various desktop daemons we support, and only
	  when those are not available use the systems native sound
	  system. Also try ALSA before the native sound system, since
	  the native sound system on Linux is set to OSS, and ALSA
	  definitely is preferable over OSS.
	* doc/C/timidity.1, doc/C/timidity.cfg.5: [PATCH 4/9] Various
	  man page fixes