@@ -1,3 +1,12 @@
+2011-12-07  TAMUKI Shoichi <tamuki@linet.gr.jp>
+
+	* timidity/playmidi.c: About 6 years ago, a simple patch was
+	  merged, which changed sustained notes not to drop when
+	  opt_overlap_voice_allow is enabled.  Perhaps, this might
+	  have a good effect in a certain case, however it often
+	  misses the tracer display.  So, I reverted the patch as a
+	  workaround.
+
 2011-12-06  TAMUKI Shoichi <tamuki@linet.gr.jp>
 
 	* interface/Makefile.am, interface/timidity.el,
